# mynotes

./: 404.html  index.html  mkdocs.yml  pyproject.toml
docker/: index.html
docs/: docker.md  index.md  poetry_overview.md
poetry_overview/: index.html
search/: search_index.json
site/: 404.html  index.html
site/docker/: index.html
site/poetry_overview/: index.html
site/search/: search_index.json
tests/: test_mynotes.py
