[tool.poetry]
name = "mynotes"
version = "0.1.0"
description = ""
authors = ["Alex-Gregory-1 <alex.gregory1@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
